--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,14 @@
         "identity",
         "https://graphql.anilist.co/*"
     ],
+    "content_scripts": [
+        {
+            "matches": [
+                "<all_urls>"
+            ],
+            "js" : ["content.js"]
+        }
+    ],
     "browser_action": {
         "default_popup": "popup.html"
     },
