Added background page, made popup page action, content scripts checks width when more than 90%

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
         "storage",
         "identity",
         "https://graphql.anilist.co/*",
-        "tabs"
+        "tabs",
+        "declarativeContent"
     ],
     "content_scripts": [
         {
@@ -17,7 +18,11 @@
             "js" : ["content.js"]
         }
     ],
-    "browser_action": {
+    "background": {
+        "scripts": ["background.js"],
+        "persistent": false
+      },
+    "page_action": {
         "default_popup": "popup.html"
     },
     "manifest_version": 2
