--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
         }
     ],
     "background": {
-        "scripts": ["background.js"],
+        "scripts": ["background.js","auth.js","default.js"],
         "persistent": false
       },
     "page_action": {
