Implemented kissanime.ru

--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,12 @@
                 "https://twist.moe/*"
             ],
             "js" : ["content.js"]
+        },
+        {
+            "matches": [
+                "https://kissanime.ru/*"
+            ],
+            "js" : ["contentKA.js"]
         }
     ],
     "background": {
